fix: a small layout issues

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -18,4 +18,19 @@ textarea {
     border: lightgray 1px solid;
     border-radius: 20px;
     padding: 0.5rem;
+    text-align: center;
+}
+
+
+/* increases the size of the checkbox */
+.element-size {
+    height: 2rem;
+    width: 2rem;
+    display: inline-block;
+}
+
+#terms,
+#subscribe_tick {
+    height: 100%;
+    width: 100%;
 }
