--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,9 +149,31 @@ click event showHamburger is triggered */
   color: var(--color-text);
   font-size: 1.8rem;
   font-weight: bold;
+  width: 80%;
+  margin-left: 10%;
   background-color: #FFE45E80;
   border-radius: 6rem;
   padding: 2rem;
+}
+
+/* aligns the subscribe labe, input and button */
+.align-subscribe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: min-content;
+  margin: auto;
+  background-color: #FFE45E80;
+  border-radius: 6rem;
+  padding: 2rem;
+}
+
+.subscribe {
+  margin: 1rem;
+  size: 8rem;
+  height: 4rem;
+  font-weight: bold;
+  text-align: center;
 }
 
 /* <<< end header */
@@ -202,25 +224,6 @@ click event showHamburger is triggered */
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-/* aligns the subscribe labe, input and button */
-.align-subscribe {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: min-content;
-  margin: auto;
-  background-color: #FFE45E80;
-  border-radius: 6rem;
-  padding: 2rem;
-}
-
-.subscribe {
-  margin: 1rem;
-  size: 8rem;
-  height: 4rem;
-  font-weight: bold;
 }
 
 /* removes slides which will be displayed later (10seconds) through JavaScript 'shopping_gallery' */
@@ -742,6 +745,11 @@ td {
   .nav-bar__button--menu {
     padding: 0 1rem;
     font-size: 2.8rem;
+  }
+
+  .header__intro {
+    width: 90rem;
+    margin: 2rem auto;
   }
 
   .user-quote {
